# did-stuff

./: .gitignore  .pre-commit-config.yml  .tool-versions  Makefile  README.md  codebase-analysis.md  config.example.json  conftest.py  coverage.xml  git-config-message-generator-config.aws-bedrock.example.json  git-config-message-generator-config.example.json  install-cli.sh  install.sh  prepare-commit-msg  prepare-commit-msg.aws-bedrock.llm-summary  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
c2p_templates/: codebase-analysis.j2
did_stuff/: __init__.py  cli.py  commit_message_generator.py  config.py  git_hooks.py  prepare-commit-msg
src/: commit_message_generator.py  prepare-commit-msg  print_summary.py
src/did_stuff/: __init__.py  cli.py  commit_message_generator.py  config.py  git_hooks.py
tests/: test_commit_message_generator.py
tests/test_did_stuff/: test_cli.py  test_commit_message_generator.py
