[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "did-stuff"
authors = [{ name = "Jarad DeLorenzo", email = "jaradd@gmail.com" }]
description = "AI-powered Git commit message generator"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["git", "commit", "message", "generator", "AI"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["click", "pydantic", "openai", "boto3"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff"]

[project.scripts]
did-stuff = "did_stuff.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.7"

[tool.setuptools_scm]
write_to = "src/did_stuff/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["did_stuff*"]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov=did_stuff --cov-report=xml:coverage.xml"
testpaths = ["tests"]
