[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "did-stuff"
authors = ["Jarad DeLorenzo <jaradd@gmail.com>"]
description = "AI-powered Git commit message generator"
readme = "README.md"
keywords = ["git", "commit", "message", "generator", "AI"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
version = "0.1.0" # Add a version or use dynamic versioning
packages = [{ include = "did_stuff" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
openai = "^0.27.0"
boto3 = "^1.35"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
did-stuff = "did_stuff.cli:main"

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml:coverage.xml"
testpaths = ["tests"]
